# src/routes/api.ts
@@ -4,7 +4,7 @@ import { zValidator } from "@hono/zod-validator"
 // ── Validators ──────────────────────────────────────────────────────────────
 import { RegisterValidator, LoginValidator, ForgotPasswordValidator, ResetPasswordValidator, RefreshTokenValidator, GoogleLoginSchema } from "../modules/auth/validators/auth.validator"
 import { UpdateAccountValidator, UpdateBankValidator, UpdatePasswordValidator, UpdatePreferenceValidator, UpdatePhotoValidator } from "../modules/profile/validators/profile.validator"
-import { CreateCashRedemptionValidator, CreateRedemptionVoucherValidator, CreateRedemptionProductValidator } from "../modules/redemption/validators/redemption.validator"
+import { CreateCashRedemptionValidator, CreateRedemptionVoucherValidator, CreateRedemptionProductValidator, UpdateRedemptionStatusValidator } from "../modules/redemption/validators/redemption.validator"
 import { CreateRewardValidator } from "../modules/reward/validators/reward.validator"
 import { StoreFeedbackValidator } from "../modules/feedback/validators/feedback.validator"
 
@@ -64,6 +64,7 @@ routes.get("/point", authMiddleware, roleMiddleware('user'), (c) => pointControl
 
 // Redemption
 routes.get("/redemption/cash/list", authMiddleware, roleMiddleware('admin'), (c) => redemptionController.cashList(c))
+routes.put("/redemption/cash/list/:id", authMiddleware, roleMiddleware('admin'), zValidator("json", UpdateRedemptionStatusValidator, validationHook), (c) => redemptionController.updateStatus(c))
 routes.get("/redemption", authMiddleware, roleMiddleware('user'), (c) => redemptionController.index(c))
 routes.get("/redemption/:id", authMiddleware, roleMiddleware('user'), (c) => redemptionController.show(c))
 routes.post("/redemption/cash", authMiddleware, roleMiddleware('user'), zValidator("json", CreateCashRedemptionValidator, validationHook), (c) => redemptionController.storeCash(c))
